--- a/our-services.html
+++ b/our-services.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./assets/bootstrap-5.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!-- alpine js -->
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!-- ourservices.css -->
     <link rel="stylesheet" href="./assets/style/our-services.css">
 </head>
@@ -21,14 +23,17 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                    <a class="nav-link" href="./index.html">Home</a>
-                    <a class="nav-link active" href="./our-services.html">Our Services</a>
-                    <a class="nav-link" href="#">Our Room</a>
-                    <a class="nav-link" href="#">Gallery</a>
-                    <a class="nav-link" href="#">Links</a>
-                    <a class="btn btn-primary" href="#" role="button">Contact Us</a>
-                </div>
+              <div class="navbar-nav ms-auto" x-data="navLinks()">
+                  <template x-for="link in links">
+                    <a :class="link.name == active ? 'nav-link active' : 'nav-link'"
+                      x-bind:href="link.url"
+                      x-text="link.name"
+                      @click="localStorage.setItem('active', link.name)"
+                    >
+                    </a>                      
+                  </template>
+                  <a class="btn btn-primary" href="#" role="button">Contact Us</a>                    
+              </div>                
             </div>
         </div>
     </nav>
@@ -70,7 +75,7 @@
             </p>
         </div>
     </section>
-    <section style="background-color: #1B4674" class="container-fluid konten row">
+    <section style="background-color: #1B4674" class="container-fluid konten row mx-0">
         <div class="col-sm-6 mb-5 mb-md-0 order-2">
             <img src="./assets/images/services-img-2.png" alt="services" class="img-fluid" style="object-fit: cover;">
         </div>        
@@ -81,6 +86,26 @@
               Melinda Fertility Center is part of the Melinda Hospital which deals with fertility, both male and female. Melinda Fertility Center is supported by very supportive facilities, friendly service and
             </p>
         </div>
+    </section>
+    <section class="mx-0 px-0 container-fluid row">
+      <div class="bg-img-1 col-sm-6 px-5 pb-5 d-flex">       
+        <div class="align-self-end">
+          <span class="content-sub-title mb-1">Melinda Hospital Kids Care</span>
+          <h1 class="text-white fw-bold mb-2">Baby Massage and Wellness</h1>
+          <p class="text-white">
+            Melinda Fertility Center is part of the Melinda Hospital which deals with fertility, both male and female. Melinda Fertility Center is supported by very supportive facilities, friendly service and
+          </p>
+        </div>
+      </div>
+      <div class="bg-img-2 col-sm-6 px-5 pb-5 d-flex">
+        <div class="align-self-end">
+          <span class="content-sub-title mb-1">Melinda Hospital Kids Care</span>
+          <h1 class="text-white fw-bold mb-2">Our Psychology Center</h1>
+          <p class="text-white">
+            Melinda Fertility Center is part of the Melinda Hospital which deals with fertility, both male and female. Melinda Fertility Center is supported by very supportive facilities, friendly service and
+          </p>
+        </div>
+      </div>
     </section>
     <!-- <section style="background-color: #1b467400" class="container-fluid row">
       <div class="col-sm-6">
@@ -185,6 +210,8 @@
           </div>
         </div>
     </footer>
+    <!-- alpine js component TARUH DISINI! -->
+    <script src="./scripts/navbar.js"></script>
     <script src="./assets/bootstrap-5.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
